--- a/Assign2.html
+++ b/Assign2.html
@@ -9,34 +9,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="Assign2.css" type="text/css">
 </head>
 <body>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" id="div1">
+        <div id="paddiv1">
         <h3>Pending</h3>
         <div id="Innerdiv">
-            <h4>Sample Header</h4>
+            <h5>Sample Header</h5>
             <p>25/06/1992</p>
             <p>Lorem Ipsum Dolor Sit Amet</p>
         </div>
+        </div>
     </div>
-    <div class="col-md-3"><h3>In Progress</h3></div>
-    <div class="col-md-3"><h3>Completed</h3></div>
-    <div class="col-md-3">
-        <h1>Add Task</h1>
+    <div class="col-md-3" id="div2"><div id="paddiv2"><h3>In Progress</h3></div></div>
+    <div class="col-md-3" id="div3"><div id="paddiv3"><h3>Completed</h3></div></div>
+    <div class="col-md-3" id="div4">
+        <div id="paddiv4">
+        <h3>Add Task</h3>
+            <div id="Innerdiv2">
         <input type="text" placeholder="Title">
-        <br>
         <textarea rows="4" cols="30" placeholder="Description"></textarea>
         <input type="date" placeholder="Due Date(dd/mm/yyyy">
-        <br>
-        <br>
         <button>Add Task</button>
-        <br>
-        <br>
-        <br>
         <button>Clear Data</button>
-        <div id="innnerdiv2">
+            </div>
+        <div id="Innerdiv3">
             <p>Drag Here to Delete</p>
+        </div>
         </div>
     </div>
 </div>
