--- a/Assign1.html
+++ b/Assign1.html
@@ -16,39 +16,39 @@
     <th>Semester Taken</th>
 </tr>
 <tr>
-    <td>For Credit</td>
+    <td colspan="3" class="span">For Credit</td>
 </tr>
 <tr>
-    <td>6.813</td>
-    <td>User Interface Design</td>
-    <td>Spring 2014</td>
+    <td class="colo">6.813</td>
+    <td class="icolo">User Interface Design</td>
+    <td class="icolo">Spring 2014</td>
 </tr>
 <tr>
-    <td>6.034</td>
+    <td class="colo">6.034</td>
     <td>Artificial Intelligence</td>
     <td>Fall 2013</td>
 </tr>
 <tr>
-    <td>6.006</td>
+    <td class="colo">6.006</td>
     <td>Introduction to Algorithms</td>
     <td>Fall 2013</td>
 </tr>
 <tr>
-    <td>Listener</td>
+    <td colspan="3" class="span">Listener</td>
 </tr>
 <tr>
-    <td>6.867</td>
+    <td class="colr">6.867</td>
     <td>Machine Learning</td>
     <td>Fall 2013</td>
 </tr>
 <tr>
-    <td>6.830</td>
+    <td class="colr">6.830</td>
     <td>Database Systems</td>
     <td>Fall 2012</td>
 </tr>
 </table>
 <h1>Interests</h1>
-<p>I am interested HCI,memes, and youtube videos.</p>
+    <p>I am interested <b>HCI</b>,<i>memes</i>, and youtube videos.</p>
 </div>
 <img src="Lab_Dog.jpg">
 </body>
